syntax = "proto3";
package virtengine.delegation.v1;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos_proto/cosmos.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "virtengine/delegation/v1/types.proto";

option go_package = "github.com/virtengine/virtengine/sdk/go/node/delegation/v1";

// Query defines the gRPC querier service for the delegation module
service Query {
  // Params queries the module parameters
  // buf:lint:ignore RPC_REQUEST_RESPONSE_UNIQUE
  // buf:lint:ignore RPC_RESPONSE_STANDARD_NAME
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/virtengine/delegation/v1/params";
  }

  // Delegation queries a specific delegation
  // buf:lint:ignore RPC_REQUEST_RESPONSE_UNIQUE
  // buf:lint:ignore RPC_RESPONSE_STANDARD_NAME
  rpc Delegation(QueryDelegationRequest) returns (QueryDelegationResponse) {
    option (google.api.http).get = "/virtengine/delegation/v1/delegator/{delegator_address}/validator/{validator_address}";
  }

  // DelegatorDelegations queries all delegations for a delegator
  // buf:lint:ignore RPC_REQUEST_RESPONSE_UNIQUE
  // buf:lint:ignore RPC_RESPONSE_STANDARD_NAME
  rpc DelegatorDelegations(QueryDelegatorDelegationsRequest) returns (QueryDelegatorDelegationsResponse) {
    option (google.api.http).get = "/virtengine/delegation/v1/delegator/{delegator_address}/delegations";
  }

  // ValidatorDelegations queries all delegations for a validator
  // buf:lint:ignore RPC_REQUEST_RESPONSE_UNIQUE
  // buf:lint:ignore RPC_RESPONSE_STANDARD_NAME
  rpc ValidatorDelegations(QueryValidatorDelegationsRequest) returns (QueryValidatorDelegationsResponse) {
    option (google.api.http).get = "/virtengine/delegation/v1/validator/{validator_address}/delegations";
  }

  // UnbondingDelegation queries a specific unbonding delegation
  // buf:lint:ignore RPC_REQUEST_RESPONSE_UNIQUE
  // buf:lint:ignore RPC_RESPONSE_STANDARD_NAME
  rpc UnbondingDelegation(QueryUnbondingDelegationRequest) returns (QueryUnbondingDelegationResponse) {
    option (google.api.http).get = "/virtengine/delegation/v1/unbonding/{unbonding_id}";
  }

  // DelegatorUnbondingDelegations queries all unbonding delegations for a delegator
  // buf:lint:ignore RPC_REQUEST_RESPONSE_UNIQUE
  // buf:lint:ignore RPC_RESPONSE_STANDARD_NAME
  rpc DelegatorUnbondingDelegations(QueryDelegatorUnbondingDelegationsRequest) returns (QueryDelegatorUnbondingDelegationsResponse) {
    option (google.api.http).get = "/virtengine/delegation/v1/delegator/{delegator_address}/unbonding";
  }

  // Redelegation queries a specific redelegation
  // buf:lint:ignore RPC_REQUEST_RESPONSE_UNIQUE
  // buf:lint:ignore RPC_RESPONSE_STANDARD_NAME
  rpc Redelegation(QueryRedelegationRequest) returns (QueryRedelegationResponse) {
    option (google.api.http).get = "/virtengine/delegation/v1/redelegation/{redelegation_id}";
  }

  // DelegatorRedelegations queries all redelegations for a delegator
  // buf:lint:ignore RPC_REQUEST_RESPONSE_UNIQUE
  // buf:lint:ignore RPC_RESPONSE_STANDARD_NAME
  rpc DelegatorRedelegations(QueryDelegatorRedelegationsRequest) returns (QueryDelegatorRedelegationsResponse) {
    option (google.api.http).get = "/virtengine/delegation/v1/delegator/{delegator_address}/redelegations";
  }

  // DelegatorRewards queries unclaimed rewards for a delegator from a specific validator
  // buf:lint:ignore RPC_REQUEST_RESPONSE_UNIQUE
  // buf:lint:ignore RPC_RESPONSE_STANDARD_NAME
  rpc DelegatorRewards(QueryDelegatorRewardsRequest) returns (QueryDelegatorRewardsResponse) {
    option (google.api.http).get = "/virtengine/delegation/v1/delegator/{delegator_address}/rewards/{validator_address}";
  }

  // DelegatorAllRewards queries all unclaimed rewards for a delegator
  // buf:lint:ignore RPC_REQUEST_RESPONSE_UNIQUE
  // buf:lint:ignore RPC_RESPONSE_STANDARD_NAME
  rpc DelegatorAllRewards(QueryDelegatorAllRewardsRequest) returns (QueryDelegatorAllRewardsResponse) {
    option (google.api.http).get = "/virtengine/delegation/v1/delegator/{delegator_address}/rewards";
  }

  // ValidatorShares queries the total shares for a validator
  // buf:lint:ignore RPC_REQUEST_RESPONSE_UNIQUE
  // buf:lint:ignore RPC_RESPONSE_STANDARD_NAME
  rpc ValidatorShares(QueryValidatorSharesRequest) returns (QueryValidatorSharesResponse) {
    option (google.api.http).get = "/virtengine/delegation/v1/validator/{validator_address}/shares";
  }
}

// QueryParamsRequest is the request for QueryParams
message QueryParamsRequest {}

// QueryParamsResponse is the response for QueryParams
message QueryParamsResponse {
  // params are the module parameters
  Params params = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "params",
    (gogoproto.moretags) = "yaml:\"params\""
  ];
}

// QueryDelegationRequest is the request for QueryDelegation
message QueryDelegationRequest {
  // delegator_address is the delegator's address
  string delegator_address = 1 [
    (cosmos_proto.scalar) = "cosmos.AddressString",
    (gogoproto.jsontag) = "delegator_address",
    (gogoproto.moretags) = "yaml:\"delegator_address\""
  ];

  // validator_address is the validator's address
  string validator_address = 2 [
    (cosmos_proto.scalar) = "cosmos.AddressString",
    (gogoproto.jsontag) = "validator_address",
    (gogoproto.moretags) = "yaml:\"validator_address\""
  ];
}

// QueryDelegationResponse is the response for QueryDelegation
message QueryDelegationResponse {
  // delegation is the delegation record
  Delegation delegation = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "delegation",
    (gogoproto.moretags) = "yaml:\"delegation\""
  ];

  // found indicates if the delegation was found
  bool found = 2 [
    (gogoproto.jsontag) = "found",
    (gogoproto.moretags) = "yaml:\"found\""
  ];
}

// QueryDelegatorDelegationsRequest is the request for QueryDelegatorDelegations
message QueryDelegatorDelegationsRequest {
  // delegator_address is the delegator's address
  string delegator_address = 1 [
    (cosmos_proto.scalar) = "cosmos.AddressString",
    (gogoproto.jsontag) = "delegator_address",
    (gogoproto.moretags) = "yaml:\"delegator_address\""
  ];

  // pagination is optional pagination parameters
  cosmos.base.query.v1beta1.PageRequest pagination = 2 [
    (gogoproto.jsontag) = "pagination,omitempty",
    (gogoproto.moretags) = "yaml:\"pagination\""
  ];
}

// QueryDelegatorDelegationsResponse is the response for QueryDelegatorDelegations
message QueryDelegatorDelegationsResponse {
  // delegations are the delegation records
  repeated Delegation delegations = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "delegations",
    (gogoproto.moretags) = "yaml:\"delegations\""
  ];

  // pagination is the pagination response
  cosmos.base.query.v1beta1.PageResponse pagination = 2 [
    (gogoproto.jsontag) = "pagination,omitempty",
    (gogoproto.moretags) = "yaml:\"pagination\""
  ];
}

// QueryValidatorDelegationsRequest is the request for QueryValidatorDelegations
message QueryValidatorDelegationsRequest {
  // validator_address is the validator's address
  string validator_address = 1 [
    (cosmos_proto.scalar) = "cosmos.AddressString",
    (gogoproto.jsontag) = "validator_address",
    (gogoproto.moretags) = "yaml:\"validator_address\""
  ];

  // pagination is optional pagination parameters
  cosmos.base.query.v1beta1.PageRequest pagination = 2 [
    (gogoproto.jsontag) = "pagination,omitempty",
    (gogoproto.moretags) = "yaml:\"pagination\""
  ];
}

// QueryValidatorDelegationsResponse is the response for QueryValidatorDelegations
message QueryValidatorDelegationsResponse {
  // delegations are the delegation records
  repeated Delegation delegations = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "delegations",
    (gogoproto.moretags) = "yaml:\"delegations\""
  ];

  // pagination is the pagination response
  cosmos.base.query.v1beta1.PageResponse pagination = 2 [
    (gogoproto.jsontag) = "pagination,omitempty",
    (gogoproto.moretags) = "yaml:\"pagination\""
  ];
}

// QueryUnbondingDelegationRequest is the request for QueryUnbondingDelegation
message QueryUnbondingDelegationRequest {
  // unbonding_id is the unique unbonding delegation ID
  string unbonding_id = 1 [
    (gogoproto.jsontag) = "unbonding_id",
    (gogoproto.moretags) = "yaml:\"unbonding_id\""
  ];
}

// QueryUnbondingDelegationResponse is the response for QueryUnbondingDelegation
message QueryUnbondingDelegationResponse {
  // unbonding_delegation is the unbonding delegation record
  UnbondingDelegation unbonding_delegation = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "unbonding_delegation",
    (gogoproto.moretags) = "yaml:\"unbonding_delegation\""
  ];

  // found indicates if the unbonding delegation was found
  bool found = 2 [
    (gogoproto.jsontag) = "found",
    (gogoproto.moretags) = "yaml:\"found\""
  ];
}

// QueryDelegatorUnbondingDelegationsRequest is the request for QueryDelegatorUnbondingDelegations
message QueryDelegatorUnbondingDelegationsRequest {
  // delegator_address is the delegator's address
  string delegator_address = 1 [
    (cosmos_proto.scalar) = "cosmos.AddressString",
    (gogoproto.jsontag) = "delegator_address",
    (gogoproto.moretags) = "yaml:\"delegator_address\""
  ];

  // pagination is optional pagination parameters
  cosmos.base.query.v1beta1.PageRequest pagination = 2 [
    (gogoproto.jsontag) = "pagination,omitempty",
    (gogoproto.moretags) = "yaml:\"pagination\""
  ];
}

// QueryDelegatorUnbondingDelegationsResponse is the response for QueryDelegatorUnbondingDelegations
message QueryDelegatorUnbondingDelegationsResponse {
  // unbonding_delegations are the unbonding delegation records
  repeated UnbondingDelegation unbonding_delegations = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "unbonding_delegations",
    (gogoproto.moretags) = "yaml:\"unbonding_delegations\""
  ];

  // pagination is the pagination response
  cosmos.base.query.v1beta1.PageResponse pagination = 2 [
    (gogoproto.jsontag) = "pagination,omitempty",
    (gogoproto.moretags) = "yaml:\"pagination\""
  ];
}

// QueryRedelegationRequest is the request for QueryRedelegation
message QueryRedelegationRequest {
  // redelegation_id is the unique redelegation ID
  string redelegation_id = 1 [
    (gogoproto.jsontag) = "redelegation_id",
    (gogoproto.moretags) = "yaml:\"redelegation_id\""
  ];
}

// QueryRedelegationResponse is the response for QueryRedelegation
message QueryRedelegationResponse {
  // redelegation is the redelegation record
  Redelegation redelegation = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "redelegation",
    (gogoproto.moretags) = "yaml:\"redelegation\""
  ];

  // found indicates if the redelegation was found
  bool found = 2 [
    (gogoproto.jsontag) = "found",
    (gogoproto.moretags) = "yaml:\"found\""
  ];
}

// QueryDelegatorRedelegationsRequest is the request for QueryDelegatorRedelegations
message QueryDelegatorRedelegationsRequest {
  // delegator_address is the delegator's address
  string delegator_address = 1 [
    (cosmos_proto.scalar) = "cosmos.AddressString",
    (gogoproto.jsontag) = "delegator_address",
    (gogoproto.moretags) = "yaml:\"delegator_address\""
  ];

  // pagination is optional pagination parameters
  cosmos.base.query.v1beta1.PageRequest pagination = 2 [
    (gogoproto.jsontag) = "pagination,omitempty",
    (gogoproto.moretags) = "yaml:\"pagination\""
  ];
}

// QueryDelegatorRedelegationsResponse is the response for QueryDelegatorRedelegations
message QueryDelegatorRedelegationsResponse {
  // redelegations are the redelegation records
  repeated Redelegation redelegations = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "redelegations",
    (gogoproto.moretags) = "yaml:\"redelegations\""
  ];

  // pagination is the pagination response
  cosmos.base.query.v1beta1.PageResponse pagination = 2 [
    (gogoproto.jsontag) = "pagination,omitempty",
    (gogoproto.moretags) = "yaml:\"pagination\""
  ];
}

// QueryDelegatorRewardsRequest is the request for QueryDelegatorRewards
message QueryDelegatorRewardsRequest {
  // delegator_address is the delegator's address
  string delegator_address = 1 [
    (cosmos_proto.scalar) = "cosmos.AddressString",
    (gogoproto.jsontag) = "delegator_address",
    (gogoproto.moretags) = "yaml:\"delegator_address\""
  ];

  // validator_address is the validator's address
  string validator_address = 2 [
    (cosmos_proto.scalar) = "cosmos.AddressString",
    (gogoproto.jsontag) = "validator_address",
    (gogoproto.moretags) = "yaml:\"validator_address\""
  ];
}

// QueryDelegatorRewardsResponse is the response for QueryDelegatorRewards
message QueryDelegatorRewardsResponse {
  // rewards are the unclaimed reward records
  repeated DelegatorReward rewards = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "rewards",
    (gogoproto.moretags) = "yaml:\"rewards\""
  ];

  // total_reward is the sum of all unclaimed rewards
  string total_reward = 2 [
    (gogoproto.jsontag) = "total_reward",
    (gogoproto.moretags) = "yaml:\"total_reward\""
  ];
}

// QueryDelegatorAllRewardsRequest is the request for QueryDelegatorAllRewards
message QueryDelegatorAllRewardsRequest {
  // delegator_address is the delegator's address
  string delegator_address = 1 [
    (cosmos_proto.scalar) = "cosmos.AddressString",
    (gogoproto.jsontag) = "delegator_address",
    (gogoproto.moretags) = "yaml:\"delegator_address\""
  ];

  // pagination is optional pagination parameters
  cosmos.base.query.v1beta1.PageRequest pagination = 2 [
    (gogoproto.jsontag) = "pagination,omitempty",
    (gogoproto.moretags) = "yaml:\"pagination\""
  ];
}

// QueryDelegatorAllRewardsResponse is the response for QueryDelegatorAllRewards
message QueryDelegatorAllRewardsResponse {
  // rewards are the unclaimed reward records
  repeated DelegatorReward rewards = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "rewards",
    (gogoproto.moretags) = "yaml:\"rewards\""
  ];

  // total_reward is the sum of all unclaimed rewards
  string total_reward = 2 [
    (gogoproto.jsontag) = "total_reward",
    (gogoproto.moretags) = "yaml:\"total_reward\""
  ];

  // pagination is the pagination response
  cosmos.base.query.v1beta1.PageResponse pagination = 3 [
    (gogoproto.jsontag) = "pagination,omitempty",
    (gogoproto.moretags) = "yaml:\"pagination\""
  ];
}

// QueryValidatorSharesRequest is the request for QueryValidatorShares
message QueryValidatorSharesRequest {
  // validator_address is the validator's address
  string validator_address = 1 [
    (cosmos_proto.scalar) = "cosmos.AddressString",
    (gogoproto.jsontag) = "validator_address",
    (gogoproto.moretags) = "yaml:\"validator_address\""
  ];
}

// QueryValidatorSharesResponse is the response for QueryValidatorShares
message QueryValidatorSharesResponse {
  // validator_shares is the validator shares record
  ValidatorShares validator_shares = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "validator_shares",
    (gogoproto.moretags) = "yaml:\"validator_shares\""
  ];

  // found indicates if the validator shares were found
  bool found = 2 [
    (gogoproto.jsontag) = "found",
    (gogoproto.moretags) = "yaml:\"found\""
  ];
}
